# nowide

./: .appveyor.yml  .azure-pipelines.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Config.cmake.in  README.md  appveyor.yml  azure-pipelines.yml  build.jam  codecov.yml  review_notes.txt  template.hpp
.github/: codecov.sh  install.sh
.github/workflows/: ci.yml  ci_tests.yml  posix.yml  release.yml  update_standalone.yml
boost/nowide/: args.hpp  cenv.hpp  convert.hpp  cppenv.hpp  cstdio.hpp  filebuf.hpp  fstream.hpp  iostream.hpp  stackstring.hpp  system.hpp  windows.hpp
ci/: appveyor.codecov.yml
cmake/: BoostAddLibrary.cmake  BoostAddOptions.cmake  BoostAddWarnings.cmake  BoostInstall.cmake  FindOpenCppCoverage.cmake  InstallTargets.cmake
doc/: Doxyfile  Jamfile.v2  changelog.dox  gendoc.sh  main.dox  main.md  main.txt
doc/html/: annotated.html  args_8hpp_source.html  cenv_8hpp_source.html  classboost_1_1nowide_1_1args-members.html  classboost_1_1nowide_1_1args.html  classboost_1_1nowide_1_1basic__filebuf.html  classboost_1_1nowide_1_1basic__filebuf_3_01char_01_4-members.html  classboost_1_1nowide_1_1basic__filebuf_3_01char_01_4.html  classboost_1_1nowide_1_1basic__fstream-members.html  classboost_1_1nowide_1_1basic__fstream.html  classboost_1_1nowide_1_1basic__ifstream-members.html  classboost_1_1nowide_1_1basic__ifstream.html  classboost_1_1nowide_1_1basic__ofstream-members.html  classboost_1_1nowide_1_1basic__ofstream.html  classboost_1_1nowide_1_1basic__stackstring-members.html  classboost_1_1nowide_1_1basic__stackstring.html  classboost_1_1nowide_1_1utf8__codecvt.html  classboost_1_1nowide_1_1utf8__codecvt_3_01CharType_00_012_01_4-members.html  classboost_1_1nowide_1_1utf8__codecvt_3_01CharType_00_012_01_4.html  classboost_1_1nowide_1_1utf8__codecvt_3_01CharType_00_014_01_4-members.html  classboost_1_1nowide_1_1utf8__codecvt_3_01CharType_00_014_01_4.html  classes.html  config_8hpp_source.html  convert_8hpp_source.html  cstdio_8hpp_source.html  cstdlib_8hpp_source.html  dir_ab6683690fd4be124cf09c612930f7a9.html  dir_c8984f1860c11f62f47abb6761e46c1e.html  dir_cba7cd329d8f45cf06543cd3b730d485.html  filebuf_8hpp_source.html  files.html  filesystem_8hpp_source.html  fstream_8hpp_source.html  functions.html  functions_func.html  hierarchy.html  index.html  iostream_8hpp_source.html  namespaceboost_1_1nowide.html  namespacemembers.html  (+8 more)
include/boost/nowide/: args.hpp  cenv.hpp  config.hpp  convert.hpp  cstdio.hpp  cstdlib.hpp  filebuf.hpp  fstream.hpp  iostream.hpp  replacement.hpp  stackstring.hpp  stat.hpp  system.hpp  utf8_codecvt.hpp  windows.hpp
include/boost/nowide/detail/: convert.hpp  is_string_container.hpp  utf.hpp
include/boost/nowide/integration/: filesystem.hpp
include/boost/nowide/utf/: convert.hpp  utf.hpp
include/nowide/: args.hpp  config.hpp  convert.hpp  cstdint.hpp  cstdio.hpp  cstdlib.hpp  filebuf.hpp  filesystem.hpp  fstream.hpp  iostream.hpp  quoted.hpp  replacement.hpp  scoped_ptr.hpp  stackstring.hpp  stat.hpp  utf8_codecvt.hpp  windows.hpp
include/nowide/detail/: convert.hpp  is_path.hpp  utf.hpp
include/nowide/utf/: convert.hpp
libs/: console.cpp
libs/nowide/doc/: Doxyfile  gendoc.sh  main.txt
libs/nowide/src/: iostream.cpp
libs/nowide/test/: Jamfile.v2  test_convert.cpp  test_env.cpp  test_fstream.cpp  test_iostream.cpp  test_stdio.cpp  test_system.cpp
meta/: libraries.json
src/: console_buffer.cpp  console_buffer.hpp  cstdio.cpp  cstdlib.cpp  filebuf.cpp  iostream.cpp  stat.cpp
standalone/: CMakeLists.txt  MinGW.cmake  config.hpp  convert  encoding_errors.hpp  encoding_utf.hpp  run_convert_and_build.sh  scoped_ptr.hpp  static_assert.hpp  utf.hpp
test/: CMakeLists.txt  Jamfile.v2  benchmark_fstream.cpp  check_lfs_support.cpp  file_test_helpers.cpp  file_test_helpers.hpp  test.hpp  test_codecvt.cpp  test_convert.cpp  test_env.cpp  test_filebuf.cpp  test_fs.cpp  test_fstream.cpp  test_fstream_cxx11.cpp  test_fstream_special.cpp  test_ifstream.cpp  test_iostream.cpp  test_iostream_passthrough.cmake  test_ofstream.cpp  test_sets.hpp  test_stackstring.cpp  test_stat.cpp  test_stdio.cpp  test_system.cpp  test_traits.cpp
test/exampleProject/: CMakeLists.txt  example_main.cpp
tools/: create_standalone.sh
